# Mambo-Archiver

./: CMakeLists.txt  README.md  main.cpp
mambo/gui/: CMakeLists.txt
mambo/gui/source/: main.cpp
mambo/gui/source/core/: window.cpp  window.hpp
mambo/lib/: CMakeLists.txt
mambo/lib/source/: compress.cpp  compress.hpp  detail.cpp  detail.hpp  mambo.hpp  uncompress.cpp  uncompress.hpp
mambo/lib/source/detail/: constants.hpp  detail.hpp  fileWorkers.cpp  fileWorkers.hpp  huffmanCode.cpp  huffmanCode.hpp
